# Human_hands_detection_and_segmentation

./: CMakeLists.txt  README.md  TMT_Final_Project.h  Task1.cpp  classi_ereditarieta_.ipynb  hsv.cpp  hsv_abgr.cpp  hsv_space.cpp  main.cpp  meanShift.cpp  showHistogram.cpp
NN/dataset_ALL/: testingALL.ipynb  trainingALL.ipynb
NN/dataset_ALL/output_ALL/: output_01.txt  output_02.txt  output_03.txt  output_04.txt  output_05.txt  output_06.txt  output_07.txt  output_08.txt  output_09.txt  output_10.txt  output_11.txt  output_12.txt  (+18 more)
NN/dataset_EGO/: testingEGO.ipynb  trainingEGO.ipynb
NN/dataset_HOF/: testingHOF.ipynb  trainingHOF.ipynb
NN/output_ALL2/: output_01.txt  output_02.txt  output_03.txt  output_04.txt  output_05.txt  output_06.txt  output_07.txt  output_08.txt  output_09.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_20.txt  output_21.txt  output_22.txt  output_23.txt  output_24.txt  output_25.txt  output_26.txt  output_27.txt  output_28.txt  output_29.txt  output_30.txt
test/bounding_boxes/: 01_output.txt  02_output.txt  03_output.txt  04_output.txt  05_output.txt  06_output.txt  07_output.txt  08_output.txt  09_output.txt  10_output.txt  11_output.txt  12_output.txt  13_output.txt  14_output.txt  15_output.txt  16_output.txt  17_output.txt  18_output.txt  19_output.txt  20_output.txt  21_output.txt  22_output.txt  23_output.txt  24_output.txt  25_output.txt  26_output.txt  27_output.txt  28_output.txt  29_output.txt  30_output.txt
(+30 files in other folders)
